--- a/index.html
+++ b/index.html
@@ -1,12 +1,461 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <!--Metadatos-->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="author" content="Francisco Santillan Suarez" />
+    <meta
+      name="description"
+      content="Portafolio de desarollo web de Francisco Santillan Suarez"
+    />
+    <meta name="keywords" content="html, css, javascript, react" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Title-->
+    <title>Francisco | Desarollo web</title>
+    <!--Favicon-->
+    <link rel="icon" type="image/x-icon" href="/img/imagen-protafolio.png" />
+    <!--Link css-->
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
+    />
+    <!--Boostrap-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Concert+One&family=Share+Tech+Mono&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!--NavBar-->
+    <nav class="navbar navbar-expand-md navbar-light">
+      <div class="container-fluid">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbar-toggler"
+          aria-controls="navbarTogglerDemo01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar-toggler">
+          <a class="navbar-brand" href="#"
+            ><img
+              src="img/imagen-protafolio.png"
+              width="50"
+              alt="Logo de la pagina web"
+          /></a>
+          <ul
+            class="navbar-nav d-flex justify-content-center align-items-center"
+          >
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#"
+                >Sobre mí</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Proyectos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Testimonio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!--section hero-->
+    <section class="hero align-items-stretch">
+      <div
+        class="hero-principal d-flex flex-column justify-content-center align-items-center"
+      >
+        <img
+          class="hero-img-perfil"
+          src="img/Circle-icons-computer.svg.png"
+          alt="Foto de Francisco Santillan"
+        />
+        <h1>Hola, soy Francisco Suarez</h1>
+        <h2>Desarollo sitios web</h2>
+      </div>
+      <div class="hero-inferior">
+        <img class="hero-inferior-imagen img-fluid" src="/img/PngItem_5217309.png"/>
+      </div>
+    </section>
+    <!--section about me-->
+    <section class="sobre-mi seccion-oscura">
+      <div class="contenedor">
+        <h2 class="seccion-titulo">Conoce a Francisco</h2>
+        <p class="seccion-texto">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi iure,
+          ratione distinctio praesentium dolorem corporis velit minus nesciunt,
+          fugit laborum quam dolorum. Voluptate quod possimus aspernatur facilis
+          vitae odit officiis.
+        </p>
+      </div>
+    </section>
+    <!-- Experiencia -->
+    <section class="experiencia seccion-clara">
+      <div class="container text-center">
+        <div class="row">
+          <!--Desarollo Web -->
+          <div class="columna col-12 col-md-4">
+            <i class="bi bi-laptop"></i>
+            <p class="experiencia-titulo">Desarollo Web</p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita
+              aut quos dolorum praesentium ad laudantium aliquid accusamus
+              aliquam recusandae veritatis?
+            </p>
+            <div class="badges-contenedor">
+              <span class="badge rounded-pill text-bg-primary">HTML</span>
+              <span class="badge rounded-pill text-bg-primary">CSS</span>
+              <span class="badge rounded-pill text-bg-primary">Boostrap</span>
+              <span class="badge rounded-pill text-bg-primary">JavaScript</span>
+              <span class="badge rounded-pill text-bg-primary">React</span>
+              <span class="badge rounded-pill text-bg-primary">Angular</span>
+            </div>
+          </div>
+          <!--Articulo-->
+          <div class="columna col-12 col-md-4">
+            <i class="bi bi-laptop"></i>
+            <p class="experiencia-titulo">Articulos</p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita
+              aut quos dolorum praesentium ad laudantium aliquid accusamus
+              aliquam recusandae veritatis?
+            </p>
+            <div class="badges-contenedor">
+              <span class="badge rounded-pill text-bg-primary">Escribir</span>
+              <span class="badge rounded-pill text-bg-primary">Editar</span>
+              <span class="badge rounded-pill text-bg-primary">Blogs</span>
+            </div>
+          </div>
+          <!--Estudiante-->
+          <div class="columna col-12 col-md-4">
+            <i class="bi bi-laptop"></i>
+            <p class="experiencia-titulo">Estudiante</p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita
+              aut quos dolorum praesentium ad laudantium aliquid accusamus
+              aliquam recusandae veritatis?
+            </p>
+            <div class="badges-contenedor">
+              <span class="badge rounded-pill text-bg-primary"
+                >freeCodeCamp</span
+              >
+              <span class="badge rounded-pill text-bg-primary"
+                >OpenBootcamp</span
+              >
+              <span class="badge rounded-pill text-bg-primary"
+                >ArgentinaPrograma</span
+              >
+              <span class="badge rounded-pill text-bg-primary">SoyHenry</span>
+              <span class="badge rounded-pill text-bg-primary">Platzi</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Proyectos -->
+    <section class="proyectos-recientes seccion-clara d-flex flex-column">
+      <h2 class="seccion-titulo texto-negro">Mis proyectos</h2>
+      <h3 class="seccion-descripcion">
+        Algunos de los proyectos creados recientemente
+      </h3>
+      <!--Galeria de proyec-->
+      <div class="container text-center proyectos-contenedor">
+        <div class="row">
+          <!--Proyect 1-->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="proyecto">
+              <img src="/img/laptop-1839876_640.jpg" alt="" />
+              <div class="overlay">
+                <p>Proyecto 1</p>
+                <div class="iconos-contenedor">
+                  <a
+                    href="https://github.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a
+                    href="https://www.argentina.gob.ar/economia/conocimiento/argentina-programa"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-laptop"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--Proyect 2-->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="proyecto">
+              <img src="/img/laptop-1839876_640.jpg" alt="" />
+              <div class="overlay">
+                <p>Proyecto 1</p>
+                <div class="iconos-contenedor">
+                  <a
+                    href="https://github.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a
+                    href="https://www.argentina.gob.ar/economia/conocimiento/argentina-programa"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-laptop"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--Proyect 3-->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="proyecto">
+              <img src="/img/laptop-1839876_640.jpg" alt="" />
+              <div class="overlay">
+                <p>Proyecto 1</p>
+                <div class="iconos-contenedor">
+                  <a
+                    href="https://github.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a
+                    href="https://www.argentina.gob.ar/economia/conocimiento/argentina-programa"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-laptop"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--Proyect 4-->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="proyecto">
+              <img src="/img/laptop-1839876_640.jpg" alt="" />
+              <div class="overlay">
+                <p>Proyecto 1</p>
+                <div class="iconos-contenedor">
+                  <a
+                    href="https://github.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a
+                    href="https://www.argentina.gob.ar/economia/conocimiento/argentina-programa"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-laptop"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--Proyect 5-->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="proyecto">
+              <img src="/img/laptop-1839876_640.jpg" alt="" />
+              <div class="overlay">
+                <p>Proyecto 1</p>
+                <div class="iconos-contenedor">
+                  <a
+                    href="https://github.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a
+                    href="https://www.argentina.gob.ar/economia/conocimiento/argentina-programa"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-laptop"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--Proyect 6-->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="proyecto">
+              <img src="/img/laptop-1839876_640.jpg" alt="" />
+              <div class="overlay">
+                <p>Proyecto 1</p>
+                <div class="iconos-contenedor">
+                  <a
+                    href="https://github.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a
+                    href="https://www.argentina.gob.ar/economia/conocimiento/argentina-programa"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-laptop"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+        <button type="button" class="btn btn-info">
+          Ver más proyectos
+          <i class="bi bi-arrow-right-circle-fill"></i>
+        </button>
+      </a>
+    </section>
+    <!--Testimonios-->
+    <!-- Testimonios -->
+    <section id="testimonios" class="testimonios seccion-clara">
+      <h2 class="seccion-titulo">Testimonios</h2>
+      <h3 class="seccion-descripcion">
+        Estos son algunos testimonios de mis clientes...
+      </h3>
+
+      <!-- Carrusel -->
+      <div
+        id="testimonios-carrusel"
+        class="carousel carousel-dark slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="container">
+              <img
+                class="testimonio-imagen rounded-circle"
+                src="img/young-man-1281282_640.jpg"
+                alt="Foto de Gino"
+              />
+              <p class="testimonio-texto">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel
+                iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed
+                aliquam interdum nisi a placerat.
+              </p>
+              <div class="testimonio-info">
+                <p class="cliente">Gino</p>
+                <p class="cargo">Gerente de proyectos en DesarrolloWeb</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <img
+                class="testimonio-imagen rounded-circle"
+                src="img/african-american-1180847_640.jpg"
+                alt="Foto de Nora"
+              />
+              <p class="testimonio-texto">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel
+                iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed
+                aliquam interdum nisi a placerat.
+              </p>
+              <div class="testimonio-info">
+                <p class="cliente">Nora</p>
+                <p class="cargo">Gerente de DiseñaMiPáginaWeb</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <img
+                class="testimonio-imagen rounded-circle"
+                src="img/man-1146530_640.jpg"
+                alt="Foto de Leonardo"
+              />
+              <p class="testimonio-texto">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel
+                iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed
+                aliquam interdum nisi a placerat.
+              </p>
+              <div class="testimonio-info">
+                <p class="cliente">Leonardo</p>
+                <p class="cargo">Director de AprendeAProgramar</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#testimonios-carrusel"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Anterior</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#testimonios-carrusel"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Siguiente</span>
+        </button>
+      </div>
+    </section>
+    <!--Contacto-->
+    <section class="contacto seccion-oscura">
+      <div class="container">
+        <div
+          class="container text-center rectangulo d-flex justify-content-evenly"
+        >
+          <div class="row">
+            <div class="col-12 col-md-4 seccion-titulo">Hablemos</div>
+            <div class="col-12 col-md-4 descripcion">
+              Contáctame para iniciar tu proyecto de desarollo web.
+            </div>
+            <div class="co-12 col-md-4">
+              <a href="mailto:franciscosantillansuarez@hotmail.com">
+                <button type="button" class="">
+                  Contacto
+                  <i class="bi bi-envelope-plus-fill"></i>
+                </button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
