--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
             class="navbar-nav d-flex justify-content-center align-items-center"
           >
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
+              <a class="nav-link active" aria-current="page" href="#sobre-mi"
                 >Sobre mí</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Proyectos</a>
+              <a class="nav-link" href="#proyectos">Proyectos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Testimonio</a>
+              <a class="nav-link" href="#testimonios">Testimonio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contacto</a>
+              <a class="nav-link" href="#contactame">Contacto</a>
             </li>
           </ul>
         </div>
@@ -97,7 +97,7 @@
       </div>
     </section>
     <!--section about me-->
-    <section class="sobre-mi seccion-oscura">
+    <section id="sobre-mi" class="sobre-mi seccion-oscura">
       <div class="contenedor">
         <h2 class="seccion-titulo">Conoce a Francisco</h2>
         <p class="seccion-texto">
@@ -172,7 +172,7 @@
       </div>
     </section>
     <!-- Proyectos -->
-    <section class="proyectos-recientes seccion-clara d-flex flex-column">
+    <section id="proyectos" class="proyectos-recientes seccion-clara d-flex flex-column">
       <h2 class="seccion-titulo texto-negro">Mis proyectos</h2>
       <h3 class="seccion-descripcion">
         Algunos de los proyectos creados recientemente
@@ -340,7 +340,6 @@
       </a>
     </section>
     <!--Testimonios-->
-    <!-- Testimonios -->
     <section id="testimonios" class="testimonios seccion-clara">
       <h2 class="seccion-titulo">Testimonios</h2>
       <h3 class="seccion-descripcion">
@@ -430,7 +429,7 @@
       </div>
     </section>
     <!--Contacto-->
-    <section class="contacto seccion-oscura">
+    <section  id="contactame"class="contacto seccion-oscura">
       <div class="container">
         <div
           class="container text-center rectangulo d-flex justify-content-evenly"
